[tool.poetry]
name = "formchen"
version = "0.1.0"
description = "Generate HTML forms and bind hierarchical and tabular data."
authors = ["Wolfgang Kühn"]
homepage = "https://github.com/decatur/form-chen"
repository = "https://github.com/decatur/form-chen"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
gridchen = "^0.1.2"
