[tool.poetry]
name = "formchen"
version = "0.1.6beta1"
description = "Generate HTML forms and bind hierarchical and tabular data."
authors = ["Wolfgang Kühn"]
homepage = "https://github.com/decatur/formchen"
repository = "https://github.com/decatur/formchen"
license = "MIT"
readme = "README.md"
packages = [
    { include = "formchen", from = "./" }
]

[tool.poetry.dependencies]
python = "^3.6"
gridchen = "^0.1.3"

[tool.poetry.dev-dependencies]
fastapi = "^0.40"
Flask = "^1.0"
